docs(slides): add docker slides

--- a/exercises/fargate/package.json
+++ b/exercises/fargate/package.json
@@ -8,9 +8,9 @@
 		"express": "^4.18.1"
 	},
 	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1",
-		"deploy": "cd stack && yarn cdk deploy && cd --"
+		"deploy": "cd stack && yarn cdk deploy && cd --",
+		"synth": "cd stack && yarn cdk synth && cd --",
+		"postinstall": "cd stack && yarn && cd --"
 	},
-	"author": "",
 	"license": "ISC"
 }
